--- a/src/templates/_base.html
+++ b/src/templates/_base.html
@@ -2,33 +2,44 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Flask User Management</title>
+    <title>PASOK: A student attendance system using QR code</title>
     <!-- meta -->
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <!-- styles -->
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{url_for('static', filename="styles.css")}}">
+    <!-- CSS only, search icons at: https://fontawesome.com/search?o=r&m=free -->
+    <link rel="stylesheet" href="..\static\fontawesome\css\all.min.css">
+    <link rel="stylesheet" href="..\static\css\bootstrap.min.css">
+    <link rel="stylesheet" href="..\static\css\styles.css">
+    <style>
+      @import url("../static/css/fonts.css");
+    </style>
     {% block css %}{% endblock %}
+    <!-- scripts -->
+    <script defer src="..\static\js\jquery-3.7.1.min.js"></script>
+    <!-- JavaScript Bundle with Popper -->
+    <script defer src="..\static\js\bootstrap.bundle.min.js"></script>
+    {% block js %}{% endblock %}
   </head>
   <body>
-
-    {% include "navigation.html" %}
-
     <div class="container">
-
-      <br>
-
+      
       <!-- messages -->
       {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
-      <div class="row">
+      <div class="row ">
         <div class="col-md-4"></div>
         <div class="col-md-4">
           {% for category, message in messages %}
-          <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+          <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert"
+          style="
+            position:fixed; 
+            top: 0px; 
+            left: 0px; 
+            width: 100%;
+            z-index:9999; 
+            border-radius:0px">
            {{message}}
            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
           </div>
@@ -43,12 +54,5 @@
       {% block content %}{% endblock %}
 
     </div>
-
-    <!-- scripts -->
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js" type="text/javascript"></script>
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    {% block js %}{% endblock %}
-
   </body>
 </html>
