--- a/src/templates/login_student.html
+++ b/src/templates/login_student.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+    <link rel="stylesheet" href="..\static\fontawesome\css\all.min.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+        @import url("../static/css/fonts.css");
         
         .no-gutters {
             > [class^="col-"],
@@ -37,11 +37,11 @@
                     transform: translate(-50%, -50%);
                     text-align: center;
                 ">
-                       <h1 style="font-size: 55px; color: #fff; font-family: roboto;">PASOK:<br>STUDENT<br> ATTENDANCE<br> TRACKER</h1>
+                       <h1 style="font-size: 55px; color: #fff; font-family: roboto; font-weight: 700;">PASOK:<br>STUDENT<br> ATTENDANCE<br> TRACKER</h1>
 
                     </div>
                     <!-- Company Logo -->
-                    <img src="pup Logo.png" width="120px" class="logo" style="position: absolute;
+                    <img src="..\static\images\PUP logo.png" width="120px" class="logo" style="position: absolute;
                     top: 20px;
                     left: 20px;">
                 </div>
@@ -56,10 +56,10 @@
                  justify-content: center;
                  position: relative;">
                 
-            <div class="col-lg-9 col-md-12 col-sm-9 col-xs-12 pup-form" style="display: flex;
-                flex-direction: column;
-                justify-content: center;
-                min-height: 100vh;">
+                <div class="col-lg-9 col-md-12 col-sm-9 col-xs-12 pup-form" style="display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    min-height: 100vh;">
                     
                     <form action=" " method="post">
                         <div class="form-group">
@@ -92,13 +92,14 @@
                             border: none;
                             margin-left: 10px;
                             border-radius: 5px;">
-                            <!-- Replace the img tag with Line Awesome icon -->
-                            <i class="las la-eye-slash password-toggle" id="toggleButton" onclick="togglePasswordVisibility()" style="position: absolute;
-                            top: 67%;
-                            right: 20px;
-                            transform: translateY(-50%);
-                            cursor: pointer;
-                            font-size: 25px;" ></i>
+                            <!-- img tag -->
+                            <i class="fa-regular fa-eye-slash" id="toggleButton" onclick="togglePasswordVisibility()" style="position: absolute;
+                                top: 67%;
+                                right: 20px;
+                                transform: translateY(-50%);
+                                cursor: pointer;
+                                width: 25px;" >
+                            </img>
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" id="check1" name="rememberme" value="something"  style="width: 5px; height: 5px; margin-left: 10px; padding: 10px;">
@@ -129,20 +130,20 @@
                 </div>
                 <div class="text-center mb-3">
                     <button type="submit" class="btn btn-primary btn-signup" style="margin-top: 20px;
-                    background-color: #FADF3A !important;
-                    color: #333 !important;
-                    font-weight: bold;
-                    font-family: Roboto !important;
-                    border: none;
-                    border-radius: 30px;
-                    width: 200px;
-                    font-size: 15px;
-                    padding: 5px;
-                ">Sign-up</button>  
+                        background-color: #FADF3A !important;
+                        color: #333 !important;
+                        font-weight: bold;
+                        font-family: Roboto !important;
+                        border: none;
+                        border-radius: 30px;
+                        width: 200px;
+                        font-size: 15px;
+                        padding: 5px;"
+                    >Sign-up</button>  
                 </div>
             </div>
             <!-- FORM CONTAINER END -->
-        </div>
+            </div>
     </div>
     <script>
         function togglePasswordVisibility() {
@@ -151,12 +152,12 @@
             
             if (passwordField.type === "password") {
                 passwordField.type = "text";
-                toggleButton.classList.remove("la-eye-slash");
-                toggleButton.classList.add("la-eye");
+                toggleButton.classList.remove("fa-eye-slash");
+                toggleButton.classList.add("fa-eye");
             } else {
                 passwordField.type = "password";
-                toggleButton.classList.remove("la-eye");
-                toggleButton.classList.add("la-eye-slash");
+                toggleButton.classList.remove("fa-eye");
+                toggleButton.classList.add("fa-eye-slash");
             }
         }
     </script>
