--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -35,7 +35,7 @@
                         <h1 style="font-size: 55px; color: #fff; font-family: roboto;">PASOK:<br>STUDENT<br> ATTENDANCE<br> TRACKER</h1>
                     </div>
                     <!-- PUP Logo -->
-                    <img src="pup Logo.png" width="120px" class="logo" style="position: absolute; top: 20px; left: 20px;">
+                    <img src="..\static\images\PUP logo.png" width="120px" class="logo" style="position: absolute; top: 20px; left: 20px;">
                 </div>
             </div>
             <!-- IMAGE CONTAINER END -->
