--- a/src/templates/_base.html
+++ b/src/templates/_base.html
@@ -32,6 +32,7 @@
         <div class="col-md-4"></div>
         <div class="col-md-4">
           {% for category, message in messages %}
+          <!-- position of alerts -->
           <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert"
           style="
             position:fixed; 
