fixed comments causing bugs, alert layout

--- a/src/templates/accounts/login.html
+++ b/src/templates/accounts/login.html
@@ -29,8 +29,8 @@
       <!-- IMAGE CONTAINER END -->
 
       <!-- FORM CONTAINER BEGIN -->
-      <!-- @ALYANNA: YOU CAN INHERIT THIS (by doing a {% extends "login.html" %} FOR register.html TO REUSE THE IMAGE CONTAINER PART. -->
-      <!-- THEN YOU CAN OVERWRITE THE FORM CONTAINER PART BY ENCLOSING THE NEW FORM CONTAINER CODE WITH {% block form_container %} {% end form_container %} -->
+      <!-- @ALYANNA: YOU CAN INHERIT THIS (by doing a {# % extends "login.html" % #} FOR register.html TO REUSE THE IMAGE CONTAINER PART. -->
+      <!-- THEN YOU CAN OVERWRITE THE FORM CONTAINER PART BY ENCLOSING THE NEW FORM CONTAINER CODE WITH {# % block form_container % #} {# % endblock % #} -->
 
       {% block form_container %}
       <div class="col-lg-6 col-md-6 pup-form-container"
