--- a/src/templates/_base.html
+++ b/src/templates/_base.html
@@ -29,16 +29,16 @@
       {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
       <div class="row ">
-        <div class="col-md-4"></div>
+        
         <div class="col-md-4">
           {% for category, message in messages %}
           <!-- position of alerts -->
           <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert"
           style="
-            position:fixed; 
+            position: fixed; 
             top: 0px; 
-            left: 0px; 
-            width: 100%;
+            left: 25%; 
+            width: 50%;
             z-index:9999; 
             border-radius:0px">
            {{message}}
@@ -46,7 +46,7 @@
           </div>
           {% endfor %}
         </div>
-        <div class="col-md-4"></div>
+        
       </div>
       {% endif %}
       {% endwith %}
