--- a/src/templates/accounts/register.html
+++ b/src/templates/accounts/register.html
@@ -8,8 +8,9 @@
     <main class="form-signin w-100 m-auto">
       <form role="form" method="post" action="">
         {{ form.csrf_token }}
-        <h1 class="h3 mb-3 fw-normal text-center">Please register</h1>
+        <h1 class="h3 mb-3 fw-normal text-center">Sign Up</h1>
 
+        <!-- email -->
         <div class="form-floating">
           {{ form.email(placeholder="email", class="form-control mb-2") }}
           {{ form.email.label }}
@@ -21,6 +22,8 @@
               {% endfor %}
             {% endif %}
         </div>
+
+        <!-- password -->
         <div class="form-floating">
           {{ form.password(placeholder="password", class="form-control mb-2") }}
           {{ form.password.label }}
@@ -32,6 +35,8 @@
               {% endfor %}
             {% endif %}
         </div>
+
+        <!-- confirm password -->
         <div class="form-floating">
           {{ form.confirm(placeholder="Confirm Password", class="form-control mb-2") }}
           {{ form.confirm.label }}
@@ -43,6 +48,44 @@
               {% endfor %}
             {% endif %}
         </div>
+
+        <!-- names -->
+        <div class="form-floating">
+          {{ form.first_name(placeholder="First name", class="form-control mb-2") }}
+          {{ form.first_name.label }}
+            {% if form.first_name.errors %}
+              {% for error in form.first_name.errors %}
+                <div class="alert alert-danger" role="alert">
+                  {{ error }}
+                </div>
+              {% endfor %}
+            {% endif %}
+        </div>
+
+        <div class="form-floating">
+          {{ form.middle_name(placeholder="Middle name (optional)", class="form-control mb-2") }}
+          {{ form.middle_name.label }}
+            {% if form.middle_name.errors %}
+              {% for error in form.middle_name.errors %}
+                <div class="alert alert-danger" role="alert">
+                  {{ error }}
+                </div>
+              {% endfor %}
+            {% endif %}
+        </div>
+
+        <div class="form-floating">
+          {{ form.last_name(placeholder="Last name", class="form-control mb-2") }}
+          {{ form.last_name.label }}
+            {% if form.last_name.errors %}
+              {% for error in form.last_name.errors %}
+                <div class="alert alert-danger" role="alert">
+                  {{ error }}
+                </div>
+              {% endfor %}
+            {% endif %}
+        </div>
+
         <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
         <p class="text-center mt-3">Already registered? <a href="{{ url_for('accounts.login') }}">Login now</a></p>
       </form>
