--- a/src/templates/accounts/login.html
+++ b/src/templates/accounts/login.html
@@ -85,7 +85,7 @@
                 </i>
             </div>
             <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-            <p class="text-center mt-3">New User? <a href="{{ url_for('accounts.register') }}">Register now</a></p>
+            <p class="text-center mt-3">No existing account? <a href="{{ url_for('accounts.register') }}">Register now</a></p>
           </form>
         <div>
       </div>
