--- a/src/templates/home (to be ported).html
+++ b/src/templates/home (to be ported).html
@@ -8,7 +8,7 @@
     .important { color: #336699; }
   </style>
   
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="..\static\css\home.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,6 +17,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
   
   <!--{% endblock %}
 {% block content %}-->
@@ -50,48 +51,85 @@
     </nav>
 
   <!-- Sidebar Class -->
-  <div class="sidebar">
-      <ul>
-          <li>
-              <a href="#">
-                  <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
-                  <span class="text">Home</span>
-              </a>
-          </li>
-          <li>
-              <a href="#">
-                  <span class="icon"><ion-icon name="bar-chart-outline"></ion-icon></span>
-                  <span class="text">Real-time Attendance</span>
-              </a>
-          </li>
-          <li>
-              <a href="#">
-                  <span class="icon"><ion-icon name="document-text-outline"></ion-icon></span>
-                  <span class="text">Student Records</span>
-              </a>
-          </li>
-          <li>
-              <a href="#">
-                  <span class="icon"><ion-icon name="list-outline"></ion-icon></span>
-                  <span class="text">Class list</span>
-              </a>
-          </li>
-      </ul>
-  </div>
+  
+  <div class="container-fluid">
+    <div class="row">
+        <!-- Sidebar -->
+        <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block bg-light sidebar">
+            <div class="position-sticky">
+                <ul class="nav flex-column p-3 row-gap-3 ">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">
+                          Home
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            Real Time Attendance
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            Student Records 
+                        </a>
+                    </li>
+                    <li class="nav-item"> 
+                        <a class="nav-link" href="#">
+                            Class List
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
   <!-- Box Container -->
-  <div class="container">
-
-
-  </div>
+  <div class="container mt-5">
+    <div class="custom-square p-4">
+        <!-- Your content goes here -->
+      
+    </div>
+</div>
 
   <!-- Paragraph "Overview" -->
   <div class="Paragraph">
       <p>Overview</p>
   </div>
-  
+
+  <!-- Dropdown button -->
+  <div class="dropdown">
+      <button class="btn btn-warning dropdown-toggle dropdown-button" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Section
+      </button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="#">Item 1</a>
+          <a class="dropdown-item" href="#">Item 2</a>
+          <a class="dropdown-item" href="#">Item 3</a>
+      </div>
+
+      <button class="btn btn-warning dropdown-toggle dropdown-button" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Subjects
+      </button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="#">Item 1</a>
+          <a class="dropdown-item" href="#">Item 2</a>
+          <a class="dropdown-item" href="#">Item 3</a>
+      </div>
+
+      <button class="btn btn-warning dropdown-toggle dropdown-button" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Date
+      </button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="#">Item 1</a> 
+          <a class="dropdown-item" href="#">Item 2</a>
+          <a class="dropdown-item" href="#">Item 3</a>
+      </div>
+      
+      
+
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.18.0/font/bootstrap-icons.css">
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 <!--{% endblock %}-->
