--- a/src/templates/accounts/register.html
+++ b/src/templates/accounts/register.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+{% include "accounts/gradient.html" %}
+
 <div class="row">
   <div class="col-md-4"></div>
   <div class="col-md-4">
