--- a/src/templates/core/faculty/realtime.html
+++ b/src/templates/core/faculty/realtime.html
@@ -1,6 +1,43 @@
 {% extends "_base.html" %}
 {% block content %}
 
-<!-- TODO: FACULTY - REALTIME ATTENDANCE DASHBOARD --> 
+<h1 class="text-center">Welcome {{current_user.email}}!</h1>
+<form action="{{ url_for('core.add') }}" method="post">
+    <input type="submit" name="add_attendance"/>   
+</form>
+
+<table>
+    <tr>
+        <th>
+            attendance_id
+        </th>
+        <th>
+            user_id
+        </th>
+        <th>
+            created
+        </th>
+        <th>
+            attendance_status
+        </th>
+    </tr>
+    {% for attendance in attendance_records %}
+    <tr>
+        <td>
+            {{ attendance.id }}
+        </td>
+        <td>
+            {{ attendance.user_id }}
+        </td>
+        <td>
+            {{ attendance.created }}
+        </td>
+        <td>
+            {{ attendance.attendance_status }}
+        </td>
+    </tr>
+    {% endfor %}
+</table>
+
 
 {% endblock %}
