--- a/src/templates/navigation.html
+++ b/src/templates/navigation.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="{{ url_for('core.home') }}" class="nav-link px-2 text-secondary">Home</a></li>
+        <li><a href="{{ url_for('core.home_faculty') }}" class="nav-link px-2 text-secondary">Home</a></li>
       </ul>
 
       <div class="text-end">
