--- a/src/templates/errors/401.html
+++ b/src/templates/errors/401.html
@@ -2,5 +2,5 @@
 {% block content %}
 <h1>401</h1>
 <p>Run along!</p>
-<p><em>Return <a href="{{url_for('core.home')}}">Home</a>?</em></p>
+<p><em>Return <a href="{{url_for('core.home_faculty')}}">Home</a>?</em></p>
 {% endblock %}
