--- a/src/templates/accounts/gradient.html
+++ b/src/templates/accounts/gradient.html
@@ -1,24 +1,12 @@
-
 <!-- IMAGE CONTAINER BEGIN -->
 <div class="col-lg-6 col-md-6 d-none d-md-block pup-image-container">
-    <div class="pup-image-container" style="background: linear-gradient(62deg, #800000, #8A1200,#9A2D00, #A94800, #E1A801);
-    background-size: cover;
-    height: 100vh;
-    position: relative;">
-        <div class="centered-text" style="position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-          text-align: center;"
-          >
+  <div class="pup-image-container" style="background-size: cover; height: 100vh; position: relative;">
+      <img src="..\static\images\PUP Campus.jpg" style="width: 100%; height: 100%;" alt="PUP Campus Image">
+      <div class="centered-text" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center;">
           <h1 style="font-size: 55px; color: #fff; font-family: roboto; font-weight: 700;">PASOK:<br>STUDENT<br> ATTENDANCE<br> TRACKER</h1>
-        </div>
-        <!-- Company Logo -->
-        <img src="..\static\images\PUP logo.png" width="120px" class="logo" style="position: absolute;
-        top: 20px;
-        left: 20px;">
-    </div>
+      </div>
+      <!-- Company Logo -->
+      <img src="..\static\images\PUP logo.png" width="120px" class="logo" style="position: absolute; top: 20px; left: 20px;">
   </div>
-  <!-- IMAGE CONTAINER END -->
-
-
+</div>
+<!-- IMAGE CONTAINER END -->
