--- a/src/templates/core/faculty/index.html
+++ b/src/templates/core/faculty/index.html
@@ -1,13 +1,13 @@
 {% extends "_base.html" %}
 {% block content %}
 <html>
-<body>
+<body >
     {% include "navigation.html" %}
     <!--navbar-->
-    <nav class="navbar navbar-expand-sm bg-light navbar-light " >
+    <nav class="navbar navbar-expand-sm bg-light navbar-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#" style="margin-left: 20px; color: #800000; font-weight: 500;">PASOK</a>
-  
+        <a class="navbar-brand" href="#" style="color: #800000; font-weight: 500;">
+          <img src="..\static\images\PUP logo.png"  style="width:40px; height: 40px; margin-right: 10px;"> PASOK</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -38,24 +38,24 @@
           <div class="col-12 col-sm-3 col-xl-2 px-sm-2 px-0 bg-light d-flex sticky-top">
               <div class="d-flex flex-sm-column flex-row flex-grow-1 align-items-center align-items-sm-start px-3 pt-2 text-white">
                   <ul class="nav flex-sm-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 justify-content-center align-items-center align-items-sm-start" id="menu">
-                      <li class="nav-item mb-2">
+                      <li class="nav-item ">
                           <a href="#" class="nav-link px-sm-0 px-2 ms-2">
-                            <i class="fa-light fa-house"></i><span class="ms-1 d-none d-sm-inline" style="color: black;">HOME</span>
+                            <i class="fa-solid fa-gauge" style="color:#6c757d;"></i><span class="ms-1 d-none d-sm-inline" style="color: black; font-size: 15px;">Dashboard</span>
                           </a>
                       </li>
-                      <li class="nav-item mb-2">
+                      <li class="nav-item ">
                         <a href="#" class="nav-link px-sm-0 px-2 ms-2">
-                          <i class="lar la-file-alt" style="font-size: 32px; color:black;"></i><span class="ms-1 d-none d-sm-inline" style="color: black;">REAL TIME ATTENDANCE</span>
+                          <i class="fa-regular fa-clock" style="color: #6c757d;"></i><span class="ms-1 d-none d-sm-inline" style="color: black; font-size: 15px;">Real Time Attendance</span>
                         </a>
                       </li>
-                      <li class="nav-item mb-2">
+                      <li class="nav-item ">
                         <a href="#" class="nav-link px-sm-0 px-2 ms-2">
-                          <i class="lar la-folder" style="font-size: 32px; color: black;"></i><span class="ms-1 d-none d-sm-inline" style="color: black;">STUDENT RECORDS</span>
+                          <i class="fa-solid fa-clipboard-list" style="color: #6c757d;"></i><span class="ms-1 d-none d-sm-inline" style="color: black; font-size: 15px;">Student Records</span>
                         </a>
                       </li>
-                      <li class="nav-item mb-2">
-                        <a href="#" class="nav-link px-sm-0 px-2 ms-2">
-                          <i class="las la-clipboard-list" style="font-size: 32px; color: black;"> </i><span class="ms-1 d-none d-sm-inline" style="color: black;">CLASS LIST</span>
+                      <li class="nav-item ">
+                        <a href=" " class="nav-link px-sm-0 px-2 ms-2">
+                          <i class="fa-solid fa-list" style="color: #6c757d;"></i><span class="ms-1 d-none d-sm-inline" style="color: black; font-size: 15px;">Class List</span>
                         </a>
                       </li>
                   </ul>
@@ -65,48 +65,129 @@
           <!-- Basta sa loob ng box >< -->
           
           
-          <div class="col d-flex flex-column h-100" style="background-color: #800000;">
-            <main class="row">
-                <div class="col pt-4">
-                  <p style="font-size: 80px; color: #FFDF00; margin-left: 20px;">Overview</p>
-                </div>
-            </main>
-            <div class="container mt-8">
-              <div class="custom-square p-4" style="background-color: #F2F2F2;
-              border: 2px solid #CCCCCC;
-              border-radius: 10px; height: 700px;
-            ">
-              <div class="dropdown">
-                <button class="btn btn-warning dropdown-toggle dropdown-button" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Section
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="#">Item 1</a>
-                  <a class="dropdown-item" href="#">Item 2</a>
-                  <a class="dropdown-item" href="#">Item 3</a>
-                </div>
-                
-                <button class="btn btn-warning dropdown-toggle dropdown-button" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Subjects
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="#">Item 1</a>
-                  <a class="dropdown-item" href="#">Item 2</a>
-                  <a class="dropdown-item" href="#">Item 3</a>
-                </div>
-                <button class="btn btn-warning dropdown-toggle dropdown-button" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Date
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="#">Item 1</a> 
-                  <a class="dropdown-item" href="#">Item 2</a>
-                  <a class="dropdown-item" href="#">Item 3</a>
-                </div>
-      </div>
-          </div>
-            </div>
-          </div>
-        </body>
+          <div class="col d-flex flex-column h-100" >
+            <div class="container-fluid p-0">
 
-</html>
+              <h1 class="h3 mb-4"><strong> Dashboard</strong></h1>
+
+              <div class="row">
+                <div class="col-auto">
+                    <select class="form-select form-select-sm" style="width: 120px; height: 35px;">
+                        <option selected>School Year</option>
+                        <option value="1">2023</option>
+                        <option value="2">2024</option>
+                        <option value="3">2025</option>
+                    </select>
+                </div>
+                <div class="col-auto" style="margin-right: 60px;">
+                    <select class="form-select form-select-sm" style="width: 120px; height: 35px;">
+                        <option selected>Semester</option>
+                        <option value="1">First Sem</option>
+                        <option value="2">2nd Sem</option>
+                    </select>
+                </div>
+            </div>
+        
+    <!-- Google Pie Chart container -->
+    <div id="google-pie-chart" style="width: 30%; height: 300px;"></div>
+</div>
+
+
+<!--Table-->
+<table class="table datatables table-bordered table-condensed table-striped p-0 m-0 dataTable no-footer dtr-inline" id="DataTables_Table_0" role="grid" aria-describedby="DataTables_Table_0_info" style="width: 100%; height: 40%;">
+  <thead>
+      <tr role="row">
+          <th class="sorting_disabled" rowspan="1" colspan="1">Subject</th>
+          <th class="sorting_disabled" rowspan="1" colspan="1">Section</th>
+          <th class="sorting_disabled" rowspan="1" colspan="1">Semester</th>
+          <th class="sorting_disabled" rowspan="1" colspan="1">Actions</th>
+      </tr>
+  </thead>
+  <tbody>
+      <tr role="row" class="odd">
+          <td tabindex="0">Subject 1</td>
+          <td>Section A</td>
+          <td>Sem</td>
+          <td>
+              <button class="btn btn-primary btn-sm" onclick="downloadAction()">Download</button>
+              <button class="btn btn-danger btn-sm" onclick="deleteAction()">Delete</button>
+          </td>
+      </tr>
+      <tr role="row" class="even">
+          <td tabindex="0">Subject 2</td>
+          <td>Section B</td>
+          <td>sem</td>
+          <td>
+              <button class="btn btn-primary btn-sm" onclick="downloadAction()">Download</button>
+              <button class="btn btn-danger btn-sm" onclick="deleteAction()">Delete</button>
+          </td>
+      </tr>
+      <tr role="row" class="even">
+        <td tabindex="0">Subject 2</td>
+        <td>Section B</td>
+        <td>sem</td>
+        <td>
+            <button class="btn btn-primary btn-sm" onclick="downloadAction()">Download</button>
+            <button class="btn btn-danger btn-sm" onclick="deleteAction()">Delete</button>
+        </td>
+    </tr>
+    <tr role="row" class="even">
+      <td tabindex="0">Subject 2</td>
+      <td>Section B</td>
+      <td>sem</td>
+      <td>
+          <button class="btn btn-primary btn-sm" onclick="downloadAction()">Download</button>
+          <button class="btn btn-danger btn-sm" onclick="deleteAction()">Delete</button>
+      </td>
+  </tr>
+      
+  </tbody>
+</table>
+
+
+<!--  Google Charts  -->
+<script src="https://www.gstatic.com/charts/loader.js"></script>
+<script>
+    google.charts.load('current', { 'packages': ['corechart'] });
+    google.charts.setOnLoadCallback(drawChart);
+
+    function drawChart() {
+        var data = google.visualization.arrayToDataTable([
+            ['Status', 'Count', { role: 'style' }],
+            ['Present', 10, 'green'],
+            ['Late', 5, 'orange'],
+            ['Absent', 3, 'red'],
+        ]);
+
+        var options = {
+            title: ' ',
+        };
+
+        var chart = new google.visualization.PieChart(document.getElementById('google-pie-chart'));
+
+        chart.draw(data, options);
+    }
+    
+   
+   
+    function downloadAction(row) {
+        // Implement download action logic here
+        // You can show a download dialog or perform a download operation.
+        alert('Downloading: Subject ' + row.cells[0].textContent + ', Section ' + row.cells[1].textContent + ', Semester ' + row.cells[2].textContent);
+    }
+
+    function deleteAction(row) {
+        // Implement delete action logic here
+        // You can show a confirmation dialog and delete the selected row.
+        if (confirm('Are you sure you want to delete this record?\nSubject: ' + row.cells[0].textContent + '\nSection: ' + row.cells[1].textContent + '\nSemester: ' + row.cells[2].textContent)) {
+            row.remove();
+        }
+    }
+</script>
+
+
+   
+          </html>
+
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 {% endblock %}
