updated text color for tble

--- a/src/templates/core/faculty/index.html
+++ b/src/templates/core/faculty/index.html
@@ -97,10 +97,10 @@
 <table class="table datatables table-bordered table-condensed table-striped p-0 m-0 dataTable no-footer dtr-inline" id="DataTables_Table_0" role="grid" aria-describedby="DataTables_Table_0_info" style="width: 100%; height: 40%;">
   <thead>
       <tr role="row">
-          <th class="sorting_disabled" rowspan="1" colspan="1">Subject</th>
-          <th class="sorting_disabled" rowspan="1" colspan="1">Section</th>
-          <th class="sorting_disabled" rowspan="1" colspan="1">Semester</th>
-          <th class="sorting_disabled" rowspan="1" colspan="1">Actions</th>
+          <th class="sorting_disabled" rowspan="1" colspan="1" style="color: #800000;">Subject</th>
+          <th class="sorting_disabled" rowspan="1" colspan="1" style="color: #800000;">Section</th>
+          <th class="sorting_disabled" rowspan="1" colspan="1" style="color: #800000;">Semester</th>
+          <th class="sorting_disabled" rowspan="1" colspan="1" style="color: #800000;">Actions</th>
       </tr>
   </thead>
   <tbody>
