--- a/src/templates/core/faculty/records.html
+++ b/src/templates/core/faculty/records.html
@@ -70,28 +70,28 @@
             <div class="container-fluid p-0">
                 <h1 class="h3 mb-4"><strong> Student Records</strong></h1>
         
-                <div class="input-group mb-3" style="width: 25%;">
+                <div class="input-group mb-3" style="width: 25%; ">
                     <input type="text" class="form-control" id="search-input" placeholder="Search" aria-label="Search" aria-describedby="search-button">
-                    <button class="btn btn-outline-secondary" type="button" id="search-button" style="width: 13%;"> <i class="fa-solid fa-magnifying-glass"></i></button>
+                    <button class="btn btn-outline-secondary" type="button" id="search-button" style="width: 13%; background-color: #800000;"> <i class="fa-solid fa-magnifying-glass" style="color: white;"></i></button>
                 </div>
         
-                <table class="table datatables table-bordered table-condensed table-striped p-0 m-0">
-                    <thead>
+                <table class="table datatables table-bordered table-condensed table-striped p-0 m-0" >
+                    <thead >
                         <tr>
                             <th style="color: #800000;">Name</th>
                             <th style="color: #800000;">Section</th>
                             <th style="color: #800000;">Present</th>
-                            <th style="color: #800000;">Absent</th> <!-- New header cell -->
+                            <th style="color: #800000;">Absent</th> 
                             <th style="color: #800000;">Late</th> <!-- New header cell -->
                         </tr>
                     </thead>
                     <tbody>
                         {% for i in range(10) %}
                         <tr data-filter="{{ 'Name ' ~ i }}" class="row-to-filter">
-                            <td>{{ 'Name ' ~ i }} data</td>
+                            <td>{{ 'Name ' ~ i }} </td>
                             <td>{{ 'Section ' ~ i }}</td>
                             <td>{{ 'Present ' ~ i }}</td>
-                            <td>{{ 'Absent ' ~ i }}</td> <!-- New cell in each row -->
+                            <td>{{ 'Absent ' ~ i }}</td> 
                             <td>{{ 'Late ' ~ i }}</td> <!-- New cell in each row -->
                         </tr>
                         {% endfor %}
