--- a/src/templates/core/faculty/records.html
+++ b/src/templates/core/faculty/records.html
@@ -55,7 +55,7 @@
                         </a>
                       </li>
                       <li class="nav-item ">
-                        <a href="" class="nav-link px-sm-0 px-2 ms-2">
+                        <a href="{{ url_for('core.classlist') }}" class="nav-link px-sm-0 px-2 ms-2">
                           <i class="fa-solid fa-list" style="color: #6c757d;"></i><span class="ms-1 d-none d-sm-inline" style="color: black; font-size: 15px;">Class List</span>
                         </a>
                       </li>
