--- a/src/templates/_base.html
+++ b/src/templates/_base.html
@@ -23,6 +23,8 @@
     {% block js %}{% endblock %}
   </head>
   <body>
+    {% include "core/navigation.html" %}
+    
     <div class="container">
       
       <!-- messages -->
