changed core home logic for faculty and student

--- a/src/templates/errors/404.html
+++ b/src/templates/errors/404.html
@@ -2,5 +2,5 @@
 {% block content %}
 <h1>404</h1>
 <p>There's nothing here!</p>
-<p><em>Return <a href="{{url_for('core.home_faculty')}}">Home</a>?</em></p>
+<p><em>Return <a href="{{url_for('core.home')}}">Home</a>?</em></p>
 {% endblock %}
