--- a/src/templates/errors/500.html
+++ b/src/templates/errors/500.html
@@ -2,5 +2,5 @@
 {% block content %}
 <h1>500</h1>
 <p>Something's wrong! We are on the job.</p>
-<p><em>Return <a href="{{url_for('core.home_faculty')}}">Home</a>?</em></p>
+<p><em>Return <a href="{{url_for('core.home')}}">Home</a>?</em></p>
 {% endblock %}
